<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2web_turtlesim</name>
  <version>0.0.2</version>
  <description>TODO: Package description</description>
  <maintainer email="tygoto@me.com">tygoto</maintainer>
  <license>TODO: License declaration</license>
  <depend>ros2web</depend>
  <depend>ros2web_joystick</depend>
  <depend>ros2web_plot</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
